@@ -1,3 +1,10 @@
+2004-05-25  Bruno Haible  <bruno@clisp.org>
+
+	Make DEBUG_GCSAFETY test sharper.
+	* lispbibl.d (gcinvariant_oint_p, nonimmprobe): New macros.
+	(gcv_object_t::operator object, gcv_object_t::gcv_object_t,
+	pgci_pointable, ngci_pointable): Use nonimmprobe.
+
 2004-05-23  Bruno Haible  <bruno@clisp.org>
 
 	* backquote.lisp (backquote-reader, bq-expand): Treat vectors of
